# secretdemoclub

./: .gitignore  README.md  elm-land.json  elm.json
client/: .gitignore  TODO.md  dev-server.js  elm-land.json  elm-pages.config.mjs  elm-watch.json  elm.json  index.html  index.js  main.css  package.json  service-worker.js  tsconfig.json
client/public/: media
client/src/: Auth.elm  Effect.elm  Env.elm  Filter.elm  Main.d.ts  Main.elm  Post.elm  Route.elm  Shared.elm  Theme.elm  Types.elm  View.elm
client/src/Layouts/: Default.elm
client/src/Pages/: Home_.elm  LoadRss.elm
client/src/Parser/: Extra.elm
client/src/Route/: Demos.elm  Error.elm  ErrorPage.elm  Index.elm  Loading.elm  Login.elm  Posts.elm
client/src/Rss/: Parser.elm
client/src/Shared/: Model.elm
client/src/View/: Post.elm
cron/: .envrc.example  .gitignore  TODO.md  custom-backend-task.js  elm.json  package.json
cron/review/src/: ReviewConfig.elm
cron/src/: Api.elm  Main.elm  Rss.elm
cron/src/BackendTask/: Extra.elm
cron/src/Parser/: Extra.elm
server/: .envrc  .envrc.example  .gitignore  Cargo.toml  Makefile  config.toml.example  devbox.json  elm.json  flake.nix  package.json  patreon.json
server/public/: index.html  main.css  media
server/src/: Backend.elm  Env.elm  Frontend.elm  Types.elm  main.rs  types.rs
src/: Auth.elm  Effect.elm  Rss.elm  Shared.elm  interop.js
src/Layouts/: Default.elm
src/Pages/: Demos.elm  Home_.elm  LoadRSS.elm  LoadRss.elm  SignIn.elm
src/Rss/: Parser.elm
src/Shared/: Model.elm  Msg.elm
src/View/: Demo.elm  Post.elm
static/: main.css
(+5 files in other folders)
