[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tower-http = { version = "0.6.2", features = ["fs"] }
