[package]
name = "secretdemoclub-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.1", features = ["rt-multi-thread", "fs", "signal"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
toml = "0.8.22"
tower-http = { version = "0.6.2", features = ["fs"] }
